Adding Infrastructure layer (SQLITE / EF Configurations ) - Stop Working for now!

--- a/API_HR_Management/API_HR_Management/appsettings.json
+++ b/API_HR_Management/API_HR_Management/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Data Source=mydatabase.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
