--- a/API_HR_Management/API_HR_Management/API_HR_Management.csproj
+++ b/API_HR_Management/API_HR_Management/API_HR_Management.csproj
@@ -9,7 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HrManagement.Application\HrManagement.Application.csproj" />
+    <ProjectReference Include="..\HrManagement.Infrastructure\HrManagement.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
