--- a/API_HR_Management/HrManagement.Application/HrManagement.Application.csproj
+++ b/API_HR_Management/HrManagement.Application/HrManagement.Application.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\HrManagement.Domain\HrManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
