--- a/API_HR_Management/API_HR_Management/API_HR_Management.csproj
+++ b/API_HR_Management/API_HR_Management/API_HR_Management.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>f01f9a62-400f-4654-a153-125b10f9290d</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
